--- a/style.css
+++ b/style.css
@@ -10,3 +10,23 @@
         color: rgb(42,122,228);
         padding: 20px;
     }
+
+    section{
+        background: rgb(184,156,213);
+        padding-bottom: 80px;
+        padding-top: 80px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .chamada-texto{
+        margin-right: 5%;
+    }
+
+    h1{
+        font-size: 30px;
+    }
+
+    p{
+        font-size: 20px;
+    }
